syntax = "proto3";

package user;

option go_package = "golectro-user/internal/delivery/grpc/proto/address;address";

service AddressService {
  rpc GetAddress (GetAddressRequest) returns (GetAddressResponse);
}

message GetAddressRequest {
  optional uint32 page = 1;
  optional uint32 limit = 2;
}

message GetAddressResponse {
  repeated Address addresses = 1;
}

message Address {
  string id = 1;
  string label = 2;
  string recipient = 3;
  string phone = 4;
  string address_line = 5;
  string city = 6;
  string province = 7;
  string postal_code = 8;
  bool is_default = 9;
  bool encrypted = 10;
  string created_at = 11; // ISO 8601 (RFC 3339)
  string updated_at = 12;
}
